--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,14 +2,18 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-  07 Jun 2007; Fabian Groffen <fabian@gentoo.org> linux/make.defaults,
+  21 Jun 2007; Fabian Groffen <grobian@gentoo.org>
+  +windows/interix/3.5/parent, +windows/interix/3.5/x86/parent:
+  add missing parent files in the windows profile
+
+  07 Jun 2007; Fabian Groffen <grobian@gentoo.org> linux/make.defaults,
   package.mask:
   Add mudflap and openmp to USE-flags on linux, based on default-linux profile
 
   01 Jun 2007; Fabian Groffen <grobian@gentoo.org> make.defaults:
   Bring back collision-protect, as we love it
 
-  01 Jun 2007; Fabian Groffen <fabian@gentoo.org> +linux/amd64/no-multilib,
+  01 Jun 2007; Fabian Groffen <grobian@gentoo.org> +linux/amd64/no-multilib,
   +linux/amd64/no-multilib/make.defaults,
   +linux/amd64/no-multilib/package.mask,
   +linux/amd64/no-multilib/package.use.mask,
