--- a/app-admin/eselect/ChangeLog
+++ b/app-admin/eselect/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/eselect
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect/ChangeLog,v 1.59 2007/05/06 23:17:05 pioto Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect/ChangeLog,v 1.61 2007/06/17 16:06:07 ulm Exp $
+
+*eselect-1.0.10 (17 Jun 2007)
+
+  17 Jun 2007; Danny van Dyk <kugelfang@gentoo.org> +eselect-1.0.10.ebuild:
+  Released 1.0.10 that fixes bugs #172472 and #172475. Thanks to Ulrich
+  Mueller <ulm@gentoo.org>.
 
   06 May 2007; Mike Kelly <pioto@gentoo.org> eselect-1.0.9.ebuild:
   Add vim-syntax USE flag to pull in eselect-syntax.
@@ -30,6 +36,9 @@
   15 Jan 2007; Mike Kelly <pioto@gentoo.org>
   +files/eselect-1.0.8-fix-parallel-install.patch, eselect-1.0.8.ebuild:
   Add a patch to really really fix Bug #162008.
+
+  14 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> eselect-1.0.7.ebuild:
+  Marked stable on amd64.
 
 *eselect-1.0.8 (14 Jan 2007)
 
