--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7033 (25 Jun 2007)
+
+  25 Jun 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.1.29.6752.ebuild, +portage-2.2.00.7033.ebuild:
+  New snapshot
+
 *portage-2.2.00.6949 (22 Jun 2007)
 
   22 Jun 2007; Fabian Groffen <grobian@gentoo.org>
