Fixed up messed libtool handling of apr, allowing to unmask it and subversion-1.4.4-r2
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%407049

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Jun 2007; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Fixed up messed libtool handling of apr, allowing to unmask it and
+  subversion-1.4.4-r2
+
   21 Jun 2007; Fabian Groffen <grobian@gentoo.org>
   +windows/interix/3.5/parent, +windows/interix/3.5/x86/parent:
   add missing parent files in the windows profile
