--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -3,6 +3,9 @@
 # $Header: $
 
   26 Jun 2007; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Remove mask for gentoolkit-dev as I removed the offending version from the tree
+
+  26 Jun 2007; Fabian Groffen <grobian@gentoo.org> package.mask:
   Fixed up messed libtool handling of apr, allowing to unmask it and
   subversion-1.4.4-r2
 
