--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Jun 2007; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Made transfig compile on Solaris, checked on Darwin works fine, unmasked
+  transfig
+
   26 Jun 2007; Fabian Groffen <grobian@gentoo.org> package.mask:
   Remove mask for gentoolkit-dev as I removed the offending version from the tree
 
