--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7085 (28 Jun 2007)
+
+  28 Jun 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.6949.ebuild, +portage-2.2.00.7085.ebuild:
+  new snapshot
+
 *portage-2.2.00.7037 (26 Jun 2007)
 
   26 Jun 2007; Fabian Groffen <grobian@gentoo.org>
