use 'source' on tcsh as well, as we can't expect everyone to have '.' as alias for 'source'... (Portage 2.2.00.7085-prefix/SVN/Darwin 8.10.0 powerpc)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%407104

--- a/sys-devel/binutils-config/files/binutils-config-1.9
+++ b/sys-devel/binutils-config/files/binutils-config-1.9
@@ -212,7 +212,7 @@ switch_profile() {
 		echo
 		ewarn " (bash) # source ${EPREFIX}/etc/profile"
 		ewarn "or"
-		ewarn " (tcsh) # . ${EPREFIX}/etc/csh.login"
+		ewarn " (tcsh) # source ${EPREFIX}/etc/csh.login"
 		echo
 	fi
 
