New 'snapshot' that fixes build issues with tcl, by building the tar with --nosdk.  Thanks Elias Pipping for testing this snapshot to be sure it doesn't cause trouble (Portage 2.2.00.7085-prefix/SVN/Darwin 8.10.0 powerpc)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%407111

--- a/sys-devel/odcctools/ChangeLog
+++ b/sys-devel/odcctools/ChangeLog
@@ -2,6 +2,14 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*odcctools-20070629 (30 Jun 2007)
+
+  30 Jun 2007; Fabian Groffen <grobian@gentoo.org>
+  +odcctools-20070629.ebuild:
+  New 'snapshot' that fixes build issues with tcl, by building the tar with
+  --nosdk. Thanks Elias Pipping for testing this snapshot to be sure it
+  doesn't cause trouble
+
 *odcctools-20070412 (12 Apr 2007)
 
   12 Apr 2007; Fabian Groffen <grobian@gentoo.org>
