--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7130 (02 Jul 2007)
+
+  02 Jul 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.7033.ebuild, +portage-2.2.00.7130.ebuild:
+  New snapshot with revised configure script and user/group management, beware!
+
 *portage-2.2.00.7085 (28 Jun 2007)
 
   28 Jun 2007; Fabian Groffen <grobian@gentoo.org>
