sync (Portage 2.2.00.7130-prefix/SVN/SunOS 5.10 i386)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%407268

--- a/dev-libs/apr/ChangeLog
+++ b/dev-libs/apr/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/apr
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/ChangeLog,v 1.86 2007/06/15 15:43:31 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/ChangeLog,v 1.88 2007/06/27 19:54:59 pylon Exp $
+
+  27 Jun 2007; Lars Weiler <pylon@gentoo.org> apr-1.2.8.ebuild:
+  Stable on ppc; bug #178264.
+
+  27 Jun 2007; Jeroen Roovers <jer@gentoo.org> apr-1.2.8.ebuild:
+  Stable for HPPA (bug #178264).
 
   15 Jun 2007; Raúl Porcel <armin76@gentoo.org> apr-1.2.8.ebuild:
   alpha stable wrt #178264
