--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,46 @@
 # ChangeLog for profile directory
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.512 2007/07/02 16:15:36 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.525 2007/07/11 23:38:05 rbu Exp $
+
+  11 Jul 2007; Robert Buchholz <rbu@gentoo.org> use.local.desc:
+  Add freevo related use flags
+
+  11 Jul 2007; Robert Buchholz <rbu@gentoo.org> package.mask:
+  Unmasking media-tv/freevo to keep stable working
+
+  11 Jul 2007; Robert Buchholz <rbu@gentoo.org> use.local.desc:
+  Removing scrobbler from herrie's use locals
+
+  11 Jul 2007; Stefan Schweizer <genstef@gentoo.org> package.mask:
+  mask freevo for removal
+
+  09 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> package.mask:
+  Add new versions of dev-haskell/opengl, openal, glut, alut, x11 to
+  package.mask.
+
+  08 Jul 2007; Jeroen Roovers <jer@gentoo.org> package.mask:
+  Mask Opera weeklies.
+
+  08 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> package.mask:
+  Add more versions of the modular haskell packages to p.mask
+
+  08 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> package.mask:
+  Fix version number for dev-haskell/arrows in package.mask
+
+  07 Jul 2007; Sven Wegener <swegener@gentoo.org> package.mask:
+  Mask =dev-db/opendbx-1.3* (development releases)
+
+  06 Jul 2007; Michał Januszewski <spock@gentoo.org> package.mask:
+  Mask media-gfx/bootsplash for removal.
+
+  06 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> package.mask:
+  Add ghc-6.6.1 to package.mask
+
+  06 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> package.mask:
+  Mask x11-themes/gdm-themes for removal. bug #167379.
+
+  06 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> use.local.desc:
+  Add binary and ghcbootstrap flags for dev-lang/ghc
 
   02 Jul 2007; Ulrich Mueller <ulm@gentoo.org> package.mask:
   Mask app-emacs/ognus for removal.
