--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for profile directory
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.525 2007/07/11 23:38:05 rbu Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.527 2007/07/12 21:13:33 gustavoz Exp $
+
+  12 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> use.local.desc:
+  Add new USE=astribank for zaptel
+
+  12 Jul 2007; Saleem Abdulrasool <compnerd@gentoo.org> use.local.desc:
+  Add new useflags for iwlwifi
 
   11 Jul 2007; Robert Buchholz <rbu@gentoo.org> use.local.desc:
   Add freevo related use flags
