--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7245 (13 Jul 2007)
+
+  13 Jul 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.7085.ebuild, +portage-2.2.00.7245.ebuild:
+  New snapshot which solves an issue with emerge -av crashing when PORTDIR
+  contains symlinks.
+
 *portage-2.2.00.7209 (09 Jul 2007)
 
   09 Jul 2007; Fabian Groffen <grobian@gentoo.org>
