--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7307 (19 Jul 2007)
+
+  19 Jul 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.7130.ebuild, +portage-2.2.00.7307.ebuild:
+  New snapshot
+
 *portage-2.2.00.7245 (13 Jul 2007)
 
   13 Jul 2007; Fabian Groffen <grobian@gentoo.org>
