Mask boost-build and boost on OSX because it builds broken libraries
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%407987

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Jul 2007; Fabian Groffen <grobian@gentoo.org>
+  darwin/macos/package.mask:
+  Mask boost-build and boost on OSX because it builds broken libraries
+
   12 Jul 2007; Fabian Groffen <grobian@gentoo.org> darwin/make.defaults:
   Block alsa stuff on Darwin
 
