New portage snapshot, doesn't do useless metadata import after sync, doesn't show repo any more if the ebuild comes from the standard PORTDIR (Portage 2.2.00.7563-prefix/SVN/Darwin 8.10.0 powerpc)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%408107

--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7563 (04 Aug 2007)
+
+  04 Aug 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.7245.ebuild, +portage-2.2.00.7563.ebuild:
+  New portage snapshot, doesn't do useless metadata import after sync, doesn't
+  show repo any more if the ebuild comes from the standard PORTDIR
+
 *portage-2.2.00.7521 (30 Jul 2007)
 
   30 Jul 2007; Fabian Groffen <grobian@gentoo.org>
