--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7571 (04 Aug 2007)
+
+  04 Aug 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.7307.ebuild, +portage-2.2.00.7571.ebuild:
+  New snapshot that doesn't leave .ecompress.file files behind when
+  ruby.eclass is in use
+
 *portage-2.2.00.7563 (04 Aug 2007)
 
   04 Aug 2007; Fabian Groffen <grobian@gentoo.org>
