--- a/dev-lang/nasm/ChangeLog
+++ b/dev-lang/nasm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/nasm
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/dev-lang/nasm/ChangeLog,v 1.42 2006/05/12 22:35:51 flameeyes Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/nasm/ChangeLog,v 1.45 2007/02/26 11:12:41 tove Exp $
+
+  24 Feb 2007; Danny van Dyk <kugelfang@gentoo.org> nasm-0.98.39-r3.ebuild:
+  Marked stable on amd64.
+
+  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
+  Transition to Manifest2.
 
   12 May 2006; Diego Pettenò <flameeyes@gentoo.org> nasm-0.98.39-r3.ebuild:
   Add ~x86-fbsd keyword.
