--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7586 (10 Aug 2007)
+
+  10 Aug 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.7521.ebuild, +portage-2.2.00.7586.ebuild:
+  New snapshot which solves creating double prefixes
+
 *portage-2.2.00.7571 (04 Aug 2007)
 
   04 Aug 2007; Fabian Groffen <grobian@gentoo.org>
