update to use latest version of shell_cmds, update header, fix typo (Portage 2.2.00.7595-prefix/SVN/Darwin 8.10.1 i386)
--HG--
rename : sys-apps/darwin-miscutils/darwin-miscutils-2.ebuild => sys-apps/darwin-miscutils/darwin-miscutils-3.ebuild
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%408627

--- a/sys-apps/darwin-miscutils/ChangeLog
+++ b/sys-apps/darwin-miscutils/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/darwin-miscutils
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*darwin-miscutils-3 (17 Aug 2007)
+
+  17 Aug 2007; Elias Pipping <pipping@mi.fu-berlin.de>
+  -darwin-miscutils-2.ebuild, +darwin-miscutils-3.ebuild:
+  update to use latest version of shell_cmds, update header, fix typo
 
 *darwin-miscutils-2 (15 Dec 2006)
 
