Moved ncurses-5.6 mask to Solaris, since it seems to be problematic there only.
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%408700

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Aug 2007; Fabian Groffen <grobian@gentoo.org> package.mask,
+  sunos/package.mask:
+  Moved ncurses-5.6 mask to Solaris, since it seems to be problematic there only.
+
   12 Aug 2007; Fabian Groffen <grobian@gentoo.org> sunos/make.defaults:
   Remove nostrip from Solaris profile, as pax-utils now works
 
