--- a/app-arch/tar/ChangeLog
+++ b/app-arch/tar/ChangeLog
@@ -1,6 +1,27 @@
 # ChangeLog for app-arch/tar
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/tar/ChangeLog,v 1.108 2007/08/21 17:40:39 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/tar/ChangeLog,v 1.114 2007/08/22 22:31:41 angelos Exp $
+
+  22 Aug 2007; Christoph Mende <angelos@gentoo.org> tar-1.18-r2.ebuild:
+  Stable on amd64 wrt security bug #189682
+
+  22 Aug 2007; Andrej Kacian <ticho@gentoo.org> tar-1.18-r2.ebuild:
+  Stable on x86, security bug #189682.
+
+  22 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> tar-1.18-r2.ebuild:
+  ppc stable, bug #189682
+
+  22 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> tar-1.18-r2.ebuild:
+  Stable on sparc wrt security #189682
+
+*tar-1.18-r2 (22 Aug 2007)
+*tar-1.17-r1 (22 Aug 2007)
+
+  22 Aug 2007; Roy Marples <uberlord@gentoo.org>
+  +files/tar-1.15.1-alt-contains-dot-dot.patch, +tar-1.17-r1.ebuild,
+  +tar-1.18-r2.ebuild:
+  Patch to fix a directory traversal vulnerability, #189682
+  thanks to Robert Buchholz.
 
   21 Aug 2007; Jeroen Roovers <jer@gentoo.org> tar-1.18-r1.ebuild:
   Stable for HPPA too.
