--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Aug 2007; Elias Pipping <pipping@mi.fu-berlin.de> package.mask,
+  sunos/package.mask:
+  Move ncurses-5.6 mask back to top level for hardcoding of wrong paths
+  into dynamic libraries
+
   23 Aug 2007; Fabian Groffen <grobian@gentoo.org> package.mask:
   Mask python-2.5 because it doesn't build for us, while the main tree has
   just unmasked it.
