--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7698 (25 Aug 2007)
+
+  25 Aug 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.7571.ebuild, +portage-2.2.00.7698.ebuild:
+  New snapshot, should have some speed improvements brought to you by Zac ;)
+
 *portage-2.2.00.7595 (12 Aug 2007)
 
   12 Aug 2007; Fabian Groffen <grobian@gentoo.org>
