New snapshot which has theoretical support for binary packages on different prefixes (Portage 2.2.00.7707-prefix/SVN/Darwin 8.10.0 powerpc)
--HG--
rename : sys-apps/portage/portage-2.2.00.7707.ebuild => sys-apps/portage/portage-2.2.00.7708.ebuild
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%409085

--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7708 (27 Aug 2007)
+
+  27 Aug 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.7707.ebuild, +portage-2.2.00.7708.ebuild:
+  New snapshot which has theoretical support for binary packages on different
+  prefixes
+
 *portage-2.2.00.7698 (25 Aug 2007)
 
   25 Aug 2007; Fabian Groffen <grobian@gentoo.org>
