Previous version didn't include a special field in binary packages, this version does. (Portage version: 2.2.00.7716-prefix/SVN/SunOS 5.10 i386)
--HG--
rename : sys-apps/portage/portage-2.2.00.7708.ebuild => sys-apps/portage/portage-2.2.00.7716.ebuild
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%409088

--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7716 (28 Aug 2007)
+
+  28 Aug 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.7708.ebuild, +portage-2.2.00.7716.ebuild:
+  Previous version didn't include a special field in binary packages, this
+  version does.
+
 *portage-2.2.00.7708 (27 Aug 2007)
 
   27 Aug 2007; Fabian Groffen <grobian@gentoo.org>
