--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,25 @@
 # ChangeLog for profile directory
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.595 2007/08/25 09:38:46 genone Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.601 2007/08/27 19:56:16 wolf31o2 Exp $
+
+  27 Aug 2007; Chris Gianelloni <wolf31o2@gentoo.org> profiles.desc:
+  Marked alpha/x86 2.4 sub-profiles as dev from stable to reduce their impact
+  on other developers.
+
+  25 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org> package.mask:
+  Temporarily p.mask'ed >=app-pda/pilot-link-0.12.2 to allow for further testing.
+
+  25 Aug 2007; Miroslav Šulc <fordfrog@gentoo.org> use.local.desc:
+  Added c++ USE flag for dev-util/netbeans
+
+  25 Aug 2007; Miroslav Šulc <fordfrog@gentoo.org> use.local.desc:
+  Added c++ USE flag for dev-util/netbeans
+
+  25 Aug 2007; Alin Năstac <mrness@gentoo.org> package.mask:
+  Mask net-dialup/l2tpd.
+
+  25 Aug 2007; Marius Mauch <genone@gentoo.org> info_pkgs:
+  add baselayout to replace /etc/gentoo-release parsing in portage-2.2
 
   25 Aug 2007; Marius Mauch <genone@gentoo.org> info_vars:
   removing AUTOCLEAN and PKGDIR as they are rarely relevant.
