--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Aug 2007; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Mask gcc-config-1.4.0-r1 because it's completely broken which I didn't
+  noticed due to my lack of proper testing
+
   24 Aug 2007; Elias Pipping <pipping@mi.fu-berlin.de> package.mask,
   sunos/package.mask:
   Move ncurses-5.6 mask back to top level for hardcoding of wrong paths
