--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,19 @@
 # ChangeLog for profile directory
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.603 2007/08/29 19:16:35 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.607 2007/08/30 21:46:37 dev-zero Exp $
+
+  30 Aug 2007; Tiziano Müller <dev-zero@gentoo.org> use.local.desc:
+  Added hb and hb2 USE-flags for sys-fs/evms
+
+  30 Aug 2007; Peter Volkov <pva@gentoo.org> use.desc, use.local.desc:
+  removed mail-client/mail-notification:evolution USE flag,
+  updated evo USE flag description, bug #157265.
+
+  30 Aug 2007; Alexis Ballier <aballier@gentoo.org> package.mask:
+  mask camlp5, needs ocaml 3.10
+
+  30 Aug 2007; William Hubbs <williamh@gentoo.org> use.local.desc:
+  Added the flite use flag for speech-dispatcher.
 
   29 Aug 2007; Ulrich Mueller <ulm@gentoo.org> updates/2Q-2007,
   updates/3Q-2007:
