--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7722 (01 Sep 2007)
+
+  01 Sep 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.7586.ebuild, -portage-2.2.00.7595.ebuild,
+  +portage-2.2.00.7722.ebuild:
+  Hotfix that makes it really possible to use binary packages from another prefix
+
 *portage-2.2.00.7716 (28 Aug 2007)
 
   28 Aug 2007; Fabian Groffen <grobian@gentoo.org>
