New snapshot, includes install_name check on Darwin, and correction of those where possible (Portage version: 2.2.00.7724-prefix/SVN/Darwin 8.10.0 powerpc)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%409292

--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7724 (02 Sep 2007)
+
+  02 Sep 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.7698.ebuild, +portage-2.2.00.7724.ebuild:
+  New snapshot, includes install_name check on Darwin, and correction of those
+  where possible
+
 *portage-2.2.00.7722 (01 Sep 2007)
 
   01 Sep 2007; Fabian Groffen <grobian@gentoo.org>
